--- a/package.json
+++ b/package.json
@@ -3,31 +3,26 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "webpack --mode development --watch ./src/index.js --output ./dist/main.js",
-    "build": "webpack --mode production ./src/index.js --output ./dist/main.js"
+    "watch:sass": "node-sass src/sass/main.scss dist/css/style.css --watch",
+    "compile:sass": "node-sass src/sass/main.scss dist/css/style.comp.css",
+    "concat:css": "concat -o dist/css/style.concat.css dist/css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" dist/css/style.concat.css -o dist/css/style.prefix.css",
+    "compress:css": "node-sass dist/css/style.prefix.css dist/css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.5.3",
-    "eslint": "^7.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "node-sass": "^4.14.0",
-    "prettier": "2.0.5",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
-  },
-  "dependencies": {
-    "bootstrap": "^4.5.0",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "animate.css": "^4.1.1",
+    "autoprefixer": "^9.8.6",
+    "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.0.0",
+    "concat": "^1.0.3",
     "jquery": "^3.5.1",
-    "popper": "^1.0.1"
+    "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
+    "postcss-cli": "^7.1.1",
+    "scrollcue": "^1.0.1",
+    "yarn-run-all": "^3.1.1"
   }
 }
